--- a/Clash/config/ACL4SSR_Online_Full.ini
+++ b/Clash/config/ACL4SSR_Online_Full.ini
@@ -17,6 +17,7 @@ ruleset=🍃 应用净化,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Ruleset/GoogleFCM.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Ruleset/SteamCN.list
+ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Bing.list
 ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/OneDrive.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Microsoft.list
 ruleset=🍎 苹果服务,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Apple.list
