--- a/Clash/config/ACL4SSR_Online_Full.ini
+++ b/Clash/config/ACL4SSR_Online_Full.ini
@@ -37,6 +37,8 @@ ruleset=📺 哔哩哔哩,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR
 ruleset=🌏 国内媒体,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ProxyGFWlist.list
+
+ruleset=Crypto,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Ruleset/Crypto.list
 ;ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ChinaIp.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ChinaCompanyIp.list
