--- a/Clash/config/ACL4SSR_Online_Full.ini
+++ b/Clash/config/ACL4SSR_Online_Full.ini
@@ -30,7 +30,7 @@ ruleset=📢 谷歌🇨🇳Play服务,https://raw.githubusercontent.com/liaoying
 ruleset=📢 谷歌🇨🇳Play下载,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Ruleset/GoogleFCM.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Telegram.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ProxyGFWlist.list
+;ruleset=🚀 节点选择,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ProxyGFWlist.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/BanAD.list
 ruleset=Crypto,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Ruleset/Crypto.list
 ruleset=Ⓜ️ 微软服务,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Microsoft.list
