--- a/Clash/config/ACL4SSR_Online_Full.ini
+++ b/Clash/config/ACL4SSR_Online_Full.ini
@@ -27,14 +27,14 @@ ruleset=Ⓜ️ 微软云盘,https://raw.githubusercontent.com/liaoyinglong/ACL4S
 ruleset=Ⓜ️ 微软Bing,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Bing.list
 
 ;ruleset=🚀 节点选择,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ProxyGFWlist.list
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/BanAD.list
+;ruleset=🛑 广告拦截,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/BanAD.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ChinaCompanyIp.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ChinaDomain.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Download.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/ChinaDomain.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Download.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/LocalAreaNetwork.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Ruleset/SteamCN.list
-ruleset=🍃 应用净化,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/BanProgramAD.list
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/UnBan.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/Ruleset/SteamCN.list
+;ruleset=🍃 应用净化,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/BanProgramAD.list
+;ruleset=🎯 全球直连,https://raw.githubusercontent.com/liaoyinglong/ACL4SSR/release/Clash/UnBan.list
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 ;设置规则标志位
