--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.4.9",
+    "hono": "^4.4.0",
     "zx": "^7.2.3"
   }
 }
