--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   "devDependencies": {
     "@clack/prompts": "^0.7.0",
     "@types/bun": "^1.0.12",
+    "hono": "^4.4.0",
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-packagejson": "^2.4.9",
-    "hono": "^4.4.0",
-    "zx": "^7.2.3"
+    "zx": "^7.2.3",
+    "consola": "^3.2.3"
   }
 }
